BSSN_RHSs.py: Bugfixes and validation against trusted Tutorial-BSSNCurvilinear.ipynb

--- a/Tutorial-BSSNCurvilinear.ipynb
+++ b/Tutorial-BSSNCurvilinear.ipynb
@@ -233,7 +233,7 @@
    "outputs": [],
    "source": [
     "# Step 2a: Initialize BSSN_RHS parameters\n",
-    "thismodule = __name__\n",
+    "thismodule = \"BSSN_RHSs\"\n",
     "par.initialize_param(par.glb_param(\"char\", thismodule, \"ConformalFactor\", \"W\"))\n",
     "\n",
     "# Step 2b: Set spatial dimension (must be 3 for BSSN)\n",
@@ -667,7 +667,7 @@
     "    for j in range(DIM):\n",
     "        trAbar += gammabarUU[i][j]*AbarDD[i][j]\n",
     "\n",
-    "# Step 8e: Define detgammabar, detgammabar_dD, and detgammabar_dDD (needed for \\partial_t \\bar{\\Lambda}^i below)\n",
+    "# Step 8d: Define detgammabar, detgammabar_dD, and detgammabar_dDD (needed for \\partial_t \\bar{\\Lambda}^i below)\n",
     "detgammabar = detgbar_over_detghat * rfm.detgammahat\n",
     "\n",
     "detgammabar_dD = ixp.zerorank1()\n",
@@ -684,12 +684,12 @@
     "                                detgbar_over_detghat_dD[j]*rfm.detgammahatdD[i] + \\\n",
     "                                detgbar_over_detghat*rfm.detgammahatdDD[i][j]\n",
     "\n",
-    "# Step 8d: Compute the contraction \\bar{D}_k \\beta^k = \\beta^k_{,k} + \\frac{\\beta^k \\bar{\\gamma}_{,k}}{2 \\bar{\\gamma}}\n",
+    "# Step 8e: Compute the contraction \\bar{D}_k \\beta^k = \\beta^k_{,k} + \\frac{\\beta^k \\bar{\\gamma}_{,k}}{2 \\bar{\\gamma}}\n",
     "Dbarbetacontraction = sp.sympify(0)\n",
     "for k in range(DIM):\n",
     "    Dbarbetacontraction += betaU_dD[k][k] + betaU[k]*detgammabar_dD[k]/(2*detgammabar)\n",
     "\n",
-    "# Step 8d: Second term of \\partial_t \\bar{\\gamma}_{i j} right-hand side:\n",
+    "# Step 8f: Second term of \\partial_t \\bar{\\gamma}_{i j} right-hand side:\n",
     "# \\frac{2}{3} \\bar{\\gamma}_{i j} \\left (\\alpha \\bar{A}_{k}^{k} - \\bar{D}_{k} \\beta^{k}\\right )\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
@@ -709,7 +709,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 8e: Third term of \\partial_t \\bar{\\gamma}_{i j} right-hand side:\n",
+    "# Step 8g: Third term of \\partial_t \\bar{\\gamma}_{i j} right-hand side:\n",
     "# -2 \\alpha \\bar{A}_{ij}\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
@@ -815,14 +815,14 @@
     "phi_dupD = ixp.zerorank1()\n",
     "phi_dDD = ixp.zerorank2()\n",
     "exp_m4phi = sp.sympify(0)\n",
-    "if par.parval_from_str(\"ConformalFactor\") == \"phi\":\n",
+    "if par.parval_from_str(\"BSSN_RHSs::ConformalFactor\") == \"phi\":\n",
     "    for i in range(DIM):\n",
     "        phi_dD[i] = cf_dD[i]\n",
     "        phi_dupD[i] = cf_dupD[i]\n",
     "        for j in range(DIM):\n",
     "            phi_dDD[i][j] = cf_dDD[i][j]\n",
     "    exp_m4phi = sp.exp(-4*cf)\n",
-    "elif par.parval_from_str(\"ConformalFactor\") == \"W\":\n",
+    "elif par.parval_from_str(\"BSSN_RHSs::ConformalFactor\") == \"W\":\n",
     "    # \\partial_i W = \\partial_i (e^{-2 phi}) = -2 e^{-2 phi} \\partial_i phi\n",
     "    # -> \\partial_i phi = -\\partial_i cf / (2 cf)\n",
     "    for i in range(DIM):\n",
@@ -833,7 +833,7 @@
     "            #                           = - cf_{,ij} / (2 cf) + \\partial_i cf \\partial_j cf / (2 cf^2)\n",
     "            phi_dDD[i][j] = (- cf_dDD[i][j] + cf_dD[i]*cf_dD[j] / cf) / (2*cf)\n",
     "    exp_m4phi = cf*cf\n",
-    "elif par.parval_from_str(\"ConformalFactor\") == \"chi\":\n",
+    "elif par.parval_from_str(\"BSSN_RHSs::ConformalFactor\") == \"chi\":\n",
     "    # \\partial_i chi = \\partial_i (e^{-4 phi}) = -4 e^{-4 phi} \\partial_i phi\n",
     "    # -> \\partial_i phi = -\\partial_i cf / (4 cf)\n",
     "    for i in range(DIM):\n",
@@ -845,7 +845,7 @@
     "            phi_dDD[i][j] = (- cf_dDD[i][j] + cf_dD[i]*cf_dD[j] / cf) / (4*cf)\n",
     "    exp_m4phi = cf\n",
     "else:\n",
-    "    print(\"Error: ConformalFactor == \"+par.parval_from_str(\"ConformalFactor\")+\" unsupported!\")\n",
+    "    print(\"Error: ConformalFactor == \"+par.parval_from_str(\"BSSN_RHSs::ConformalFactor\")+\" unsupported!\")\n",
     "    exit(1)\n",
     "    \n",
     "# Step 9d: Define phi_dBarD = phi_dD (since phi is a scalar) and phi_dBarDD (covariant derivative)\n",
@@ -930,14 +930,14 @@
     "    cf_rhs += betaU[k]*phi_dupD[k] # Term 1\n",
     "\n",
     "# Next multiply to convert phi_rhs to cf_rhs.\n",
-    "if par.parval_from_str(\"ConformalFactor\") == \"phi\":\n",
+    "if par.parval_from_str(\"BSSN_RHSs::ConformalFactor\") == \"phi\":\n",
     "    pass # do nothing; cf_rhs = phi_rhs\n",
-    "elif par.parval_from_str(\"ConformalFactor\") == \"W\":\n",
+    "elif par.parval_from_str(\"BSSN_RHSs::ConformalFactor\") == \"W\":\n",
     "    cf_rhs *= -2*cf # cf_rhs = -2*cf*phi_rhs\n",
-    "elif par.parval_from_str(\"ConformalFactor\") == \"chi\":\n",
+    "elif par.parval_from_str(\"BSSN_RHSs::ConformalFactor\") == \"chi\":\n",
     "    cf_rhs *= -4*cf # cf_rhs = -4*cf*phi_rhs\n",
     "else:\n",
-    "    print(\"Error: ConformalFactor == \"+par.parval_from_str(\"ConformalFactor\")+\" unsupported!\")\n",
+    "    print(\"Error: ConformalFactor == \"+par.parval_from_str(\"BSSN_RHSs::ConformalFactor\")+\" unsupported!\")\n",
     "    exit(1) "
    ]
   },
@@ -1363,7 +1363,15 @@
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "betU0 + vetU0*vetU_dupD00 + vetU1*vetU_dupD01/xx0 + vetU2*vetU_dupD02/(xx0*sin(xx1))\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 16: Rescale the RHS quantities so that the evolved \n",
     "#          variables are smooth across coord singularities\n",
@@ -1381,7 +1389,113 @@
     "        a_rhsDD[i][j] =     Abar_rhsDD[i][j] / rfm.ReDD[i][j]\n",
     "#print(str(Abar_rhsDD[2][2]).replace(\"**\",\"^\").replace(\"_\",\"\").replace(\"xx\",\"x\").replace(\"sin(x2)\",\"Sin[x2]\").replace(\"sin(2*x2)\",\"Sin[2*x2]\").replace(\"cos(x2)\",\"Cos[x2]\").replace(\"detgbaroverdetghat\",\"detg\"))\n",
     "#print(str(Dbarbetacontraction).replace(\"**\",\"^\").replace(\"_\",\"\").replace(\"xx\",\"x\").replace(\"sin(x2)\",\"Sin[x2]\").replace(\"detgbaroverdetghat\",\"detg\"))\n",
-    "#print(betaU_dD)"
+    "#print(betaU_dD)\n",
+    "print(vet_rhsU[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### NRPy+ Module Code Validation\n",
+    "\n",
+    "Here, as a code validation check, we verify agreement in the SymPy expressions for the RHSs of the BSSN equations between\n",
+    "1. this tutorial and \n",
+    "2. the NRPy+ BSSN module.\n",
+    "\n",
+    "By default, we analyze the RHSs in Spherical coordinates, though other coordinate systems may be chosen."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vvv Ignore the minor warnings below. vvv\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::RMAX\n",
+      "^^^ Ignore the minor warnings above. ^^^\n",
+      "\n",
+      "Consistency check between BSSN_RHSs tutorial and NRPy+ module: ALL SHOULD BE ZERO.\n",
+      "alpha_rhs - bssnrhs.alpha_rhs = 0\n",
+      "trK_rhs - bssnrhs.trK_rhs = 0\n",
+      "cf_rhs - bssnrhs.cf_rhs = 0\n",
+      "vet_rhsU[0] - bssnrhs.vet_rhsU[0] = 0\n",
+      "bet_rhsU[0] - bssnrhs.bet_rhsU[0] = 0\n",
+      "lambda_rhsU[0] - bssnrhs.lambda_rhsU[0] = 0\n",
+      "h_rhsDD[0][0] - bssnrhs.h_rhsDD[0][0] = 0\n",
+      "a_rhsDD[0][0] - bssnrhs.a_rhsDD[0][0] = 0\n",
+      "h_rhsDD[0][1] - bssnrhs.h_rhsDD[0][1] = 0\n",
+      "a_rhsDD[0][1] - bssnrhs.a_rhsDD[0][1] = 0\n",
+      "h_rhsDD[0][2] - bssnrhs.h_rhsDD[0][2] = 0\n",
+      "a_rhsDD[0][2] - bssnrhs.a_rhsDD[0][2] = 0\n",
+      "vet_rhsU[1] - bssnrhs.vet_rhsU[1] = 0\n",
+      "bet_rhsU[1] - bssnrhs.bet_rhsU[1] = 0\n",
+      "lambda_rhsU[1] - bssnrhs.lambda_rhsU[1] = 0\n",
+      "h_rhsDD[1][0] - bssnrhs.h_rhsDD[1][0] = 0\n",
+      "a_rhsDD[1][0] - bssnrhs.a_rhsDD[1][0] = 0\n",
+      "h_rhsDD[1][1] - bssnrhs.h_rhsDD[1][1] = 0\n",
+      "a_rhsDD[1][1] - bssnrhs.a_rhsDD[1][1] = 0\n",
+      "h_rhsDD[1][2] - bssnrhs.h_rhsDD[1][2] = 0\n",
+      "a_rhsDD[1][2] - bssnrhs.a_rhsDD[1][2] = 0\n",
+      "vet_rhsU[2] - bssnrhs.vet_rhsU[2] = 0\n",
+      "bet_rhsU[2] - bssnrhs.bet_rhsU[2] = 0\n",
+      "lambda_rhsU[2] - bssnrhs.lambda_rhsU[2] = 0\n",
+      "h_rhsDD[2][0] - bssnrhs.h_rhsDD[2][0] = 0\n",
+      "a_rhsDD[2][0] - bssnrhs.a_rhsDD[2][0] = 0\n",
+      "h_rhsDD[2][1] - bssnrhs.h_rhsDD[2][1] = 0\n",
+      "a_rhsDD[2][1] - bssnrhs.a_rhsDD[2][1] = 0\n",
+      "h_rhsDD[2][2] - bssnrhs.h_rhsDD[2][2] = 0\n",
+      "a_rhsDD[2][2] - bssnrhs.a_rhsDD[2][2] = 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 17: We already have SymPy expressions for BSSN RHS expressions\n",
+    "#         in terms of other SymPy variables. Even if we reset the \n",
+    "#         list of NRPy+ gridfunctions, these *SymPy* expressions for\n",
+    "#         BSSN RHS variables *will remain unaffected*. \n",
+    "# \n",
+    "#         Here, we will use the above-defined BSSN RHS expressions\n",
+    "#         to validate against the same expressions in the \n",
+    "#         BSSN/BSSN_RHSs.py file, to ensure consistency between \n",
+    "#         this tutorial and the module itself.\n",
+    "#\n",
+    "# Reset the list of gridfunctions, as registering a gridfunction\n",
+    "#   twice will spawn an error.\n",
+    "gri.glb_gridfcs_list = []\n",
+    "\n",
+    "\n",
+    "# Step 18: Call the BSSN_RHSs() function from within the\n",
+    "#          BSSN/BSSN_RHSs.py module,\n",
+    "#          which should do exactly the same as in Steps 1-16 above.\n",
+    "print(\"vvv Ignore the minor warnings below. vvv\")\n",
+    "\n",
+    "import BSSN.BSSN_RHSs as bssnrhs\n",
+    "bssnrhs.BSSN_RHSs()\n",
+    "\n",
+    "print(\"^^^ Ignore the minor warnings above. ^^^\\n\")\n",
+    "\n",
+    "print(\"Consistency check between BSSN_RHSs tutorial and NRPy+ module: ALL SHOULD BE ZERO.\")\n",
+    "\n",
+    "print(\"alpha_rhs - bssnrhs.alpha_rhs = \" + str(alpha_rhs - bssnrhs.alpha_rhs))\n",
+    "print(\"trK_rhs - bssnrhs.trK_rhs = \" + str(trK_rhs - bssnrhs.trK_rhs))\n",
+    "print(\"cf_rhs - bssnrhs.cf_rhs = \" + str(cf_rhs - bssnrhs.cf_rhs))\n",
+    "\n",
+    "for i in range(DIM):\n",
+    "    print(\"vet_rhsU[\"+str(i)+\"] - bssnrhs.vet_rhsU[\"+str(i)+\"] = \" + str(vet_rhsU[i] - bssnrhs.vet_rhsU[i]))\n",
+    "    print(\"bet_rhsU[\"+str(i)+\"] - bssnrhs.bet_rhsU[\"+str(i)+\"] = \" + str(bet_rhsU[i] - bssnrhs.bet_rhsU[i]))\n",
+    "    print(\"lambda_rhsU[\"+str(i)+\"] - bssnrhs.lambda_rhsU[\"+str(i)+\"] = \" + \n",
+    "          str(lambda_rhsU[i] - bssnrhs.lambda_rhsU[i]))\n",
+    "    for j in range(DIM):\n",
+    "        print(\"h_rhsDD[\"+str(i)+\"][\"+str(j)+\"] - bssnrhs.h_rhsDD[\"+str(i)+\"][\"+str(j)+\"] = \" \n",
+    "              + str(h_rhsDD[i][j] - bssnrhs.h_rhsDD[i][j]))\n",
+    "        print(\"a_rhsDD[\"+str(i)+\"][\"+str(j)+\"] - bssnrhs.a_rhsDD[\"+str(i)+\"][\"+str(j)+\"] = \" \n",
+    "              + str(a_rhsDD[i][j] - bssnrhs.a_rhsDD[i][j]))\n",
+    "                "
    ]
   }
  ],
@@ -1401,7 +1515,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
