BSSN tutorial is officially beyond beta!

--- a/NRPy+_Tutorial.ipynb
+++ b/NRPy+_Tutorial.ipynb
@@ -41,8 +41,7 @@
     "+ #### Application: [Maxwell's Equations in Curvilinear Coordinates, using a Reference Metric](Tutorial-MaxwellCurvilinear.ipynb) (*Courtesy Ian Ruchlin*)\n",
     "\n",
     "#### (READ THIRD) Solving Einstein's Equations in Curvilinear Coordinates\n",
-    "+ #### (IN PROGRESS) Application: [General Relativity in the BSSN Formalism, Moving Puncture Gauge](Tutorial-BSSNCurvilinear.ipynb)\n",
-    "    + *While in progress, see commented NRPy+ module source codes [BSSN_RHSs.py](https://bitbucket.org/zach_etienne/nrpy/src/master/BSSN_RHSs.py?mode=edit&spa=0), which depends on [ref_metric__hatted_quantities.py](https://bitbucket.org/zach_etienne/nrpy/src/master/ref_metric__hatted_quantities.py?mode=edit&spa=0)* (Disclaimer: this source code is from the original version of NRPy+; still needs to be ported to the latest version.)"
+    "+ #### Application: [General Relativity in the BSSN Formalism, Moving Puncture Gauge](Tutorial-BSSNCurvilinear.ipynb)"
    ]
   }
  ],
@@ -62,7 +61,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
