Continued to add to the documentation.

--- a/Tutorial-WeylScalars.ipynb
+++ b/Tutorial-WeylScalars.ipynb
@@ -6,15 +6,26 @@
    "source": [
     "# The Weyl Scalar $\\psi_4$\n",
     "\n",
+    "### ***Citations:*** This module is designed to replicate the results from the state-of-the-art [WeylScal4 diagnostic module](https://bitbucket.org/einsteintoolkit/einsteinanalysis/src/master/WeylScal4/) in the Einstein Toolkit, but building upon the generic reference metric formalism of [Ruchlin, Etienne, and Baumgarte](https://arxiv.org/abs/1712.07658).\n",
+    "\n",
+    "### WeylScal4 itself is built upon the prescription of [Baker, Campanelli, and Lousto. PRD 65, 044001 (2002)](https://arxiv.org/abs/gr-qc/0104063) (henceforth, the \"BCL paper\"). which we follow below.\n",
+    "\n",
     "The Weyl scalar $\\psi_4$, is a quantity used to extract the gravitational wave strain $h_+$ and $h_{\\times}$ directly from numerical relativity simulations. \n",
     "\n",
     "$\\psi_4$ is defined in terms of the gravitational wave strain via\n",
     "\n",
     "$$\\psi_4 = \\ddot{h}_+ - i \\ddot{h}_{\\times}.$$ \n",
     "\n",
-    "This module is designed to replicate the results from the state-of-the-art [WeylScal4 diagnostic module](https://bitbucket.org/einsteintoolkit/einsteinanalysis/src/master/WeylScal4/) in the Einstein Toolkit, but building upon the generic reference metric formalism of [Ruchlin, Etienne, and Baumgarte](https://arxiv.org/abs/1712.07658).\n",
+    "This module draws heavily on work already done in [BSSN_RHSs.py](BSSN/BSSN_RHSs.py). In particular, we directly borrow:\n",
+    "* the rescaled metric $h_{ij}$, and its first and second derivatives,\n",
+    "* the trace of the extrinsic curvature tensor $K$,\n",
+    "* the conformal metric $\\bar{\\gamma}_{ij}$ and its inverse $\\bar{\\gamma}^{ij}$,\n",
+    "* the conformal Ricci tensor $\\bar{R}_{ij}$,\n",
+    "* the Christoffel symbols $\\bar{\\Gamma}^i_{jk}$,\n",
+    "* the conformal, trace-free extrinsic curvature $\\bar{A}_{ij}$,\n",
+    "* and the inverse square of the conformal factor $e^{-4 \\phi}$.\n",
     "\n",
-    "WeylScal4 itself is built upon the prescription of [Baker, Campanelli, and Lousto. PRD 65, 044001 (2002)](https://arxiv.org/abs/gr-qc/0104063), which we follow below."
+    "More details on these quantities are documented in [the tutorial covering BSSN in curvilinear coordinates](Tutorial-BSSNCurvilinear.ipynb). We also use reference metric quantities through the module [reference_metric.py](reference_metric.py); the tutorial for that is available [here](Tutorial-Reference_Metric.ipynb)."
    ]
   },
   {
@@ -29,6 +40,7 @@
     "import grid as gri\n",
     "import finite_difference as fin\n",
     "import reference_metric as rfm\n",
+    "\n",
     "#rfm.reference_metric() # Already called in BSSN_RHSs.py\n",
     "from outputC import *\n",
     "import BSSN.BSSN_RHSs as bssn\n",
@@ -41,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 1: Initialize WeylScalar parameters\n",
+    "# Step 2: Initialize WeylScalar parameters\n",
     "thismodule = __name__\n",
     "# Current option: Approx_QuasiKinnersley = choice made in Baker, Campanelli, and Lousto. PRD 65, 044001 (2002)\n",
     "par.initialize_param(par.glb_param(\"char\", thismodule, \"TetradChoice\", \"Approx_QuasiKinnersley\"))"
@@ -53,7 +65,7 @@
    "source": [
     "### Defining the Levi-Civita Symbol\n",
     "\n",
-    "Next we declare a function that defines the rank-3 Levi-Civita symbol, $\\epsilon_{ijk}$, applying the algorithm in the [Wikipedia article on the Levi-Civita symbol](https://en.wikipedia.org/wiki/Levi-Civita_symbol), but exploiting properties of computer integer arithmetic as outlined [here](https://en.wikipedia.org/wiki/Levi-Civita_symbol). \n",
+    "Next we declare a function that defines the rank-3 Levi-Civita symbol, $\\epsilon_{ijk}$, applying the algorithm in the [Wikipedia article on the Levi-Civita symbol](https://en.wikipedia.org/wiki/Levi-Civita_symbol), but exploiting properties of computer integer arithmetic as outlined [here](https://codegolf.stackexchange.com/questions/160359/levi-civita-symbol). \n",
     "\n",
     "In short, the Levi-Civita symbol $\\epsilon_{ijk}$ is set to 1 for even permutations of the indices, -1 for odd permutations, or zero if any indices are repeated."
    ]
@@ -64,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 2: Define the rank-3 version of the Levi-Civita symbol. Amongst\n",
+    "# Step 3: Define the rank-3 version of the Levi-Civita symbol. Amongst\n",
     "#         other uses, this is needed for the construction of the approximate \n",
     "#         quasi-Kinnersley tetrad.\n",
     "def define_LeviCivitaSymbol_rank3(DIM=-1):\n",
@@ -85,9 +97,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Defining the Approximate Quasi-Kinnersley Tetrad\n",
+    "## Defining the Approximate Quasi-Kinnersley Tetrad\n",
     "\n",
-    "To define the Weyl scalars, first a tetrad must be chosen. Below, for compatibility with the [WeylScal4 diagnostic module](https://bitbucket.org/einsteintoolkit/einsteinanalysis/src/master/WeylScal4/), we implement the approximate  quasi-Kinnersley tetrad of [Baker, Campanelli, and Lousto](https://arxiv.org/pdf/gr-qc/0104063.pdf) (henceforth, the \"BCL paper\").\n",
+    "To define the Weyl scalars, first a tetrad must be chosen. Below, for compatibility with the [WeylScal4 diagnostic module](https://bitbucket.org/einsteintoolkit/einsteinanalysis/src/master/WeylScal4/), we implement the approximate  quasi-Kinnersley tetrad of the BCL paper.\n",
     "\n",
     "We begin with the vectors given in eqs. 5.6 and 5.7 of the BCL paper,\n",
     "\\begin{align}\n",
@@ -95,9 +107,15 @@
     "    v_2^a &= [x,y,z] \\\\\n",
     "    v_3^a &= {\\rm det}(g)^{1/2} g^{ad} \\epsilon_{dbc} v_1^b v_2^c,\n",
     "\\end{align}\n",
-    "and carry out the Gram-Schmidt orthonormalization process. The vectors $w_i^a$ are placeholders; the final product of the orthonormalization is the vectors $e_i^a$.\n",
+    "and carry out the Gram-Schmidt orthonormalization process. Note that these vectors are initially orthogonal to each other; one is in the $\\phi$ direction, one is in $r$, and the third is the cross product of the first two. The vectors $w_i^a$ are placeholders in the code; the final product of the orthonormalization is the vectors $e_i^a$. So,\n",
+    "\\begin{align}\n",
+    "e_1^a &= \\frac{v_1^a}{\\omega_{11}} \\\\\n",
+    "e_2^a &= \\frac{v_2^a - \\omega_{12} e_1^a}{\\omega_{22}} \\\\\n",
+    "e_3^a &= \\frac{v_3^a - \\omega_{13} e_1^a - \\omega_{23} e_2^a}{\\omega_{33}}, \\\\\n",
+    "\\end{align}\n",
+    "where $\\omega_{ij} = v_i^a v_j^b g_{ab}$ needs to be updated between steps (to save resources, we can get away with only calculating components as needed), and uses $e_i^a$ instead of $v_i^a$ if it has been calculated. \n",
     "\n",
-    "Once we have orthogonal, normalized vectors, we can contruct the tetrad itself, again drawing on eqs. 5.6. We can draw on SymPy's built-in tools for complex numbers to build the complex vectors $m$ and $\\bar{m}$:\n",
+    "Once we have orthogonal, normalized vectors, we can contruct the tetrad itself, again drawing on eqs. 5.6. We can draw on SymPy's built-in tools for complex numbers to build the complex vectors $m^a$ and $\\bar{m}^a$:\n",
     "\\begin{align}\n",
     "    l^a &= \\frac{1}{\\sqrt{2}} e_2^a \\\\\n",
     "    n^a &= \\frac{-1}{\\sqrt{2}} e_2^a \\\\\n",
@@ -105,7 +123,7 @@
     "    \\bar{m}^a &= \\frac{1}{\\sqrt{2}} (e_3^a - i e_1^a)\n",
     "\\end{align}\n",
     "\n",
-    "We will also assume that $n^0 = \\frac{1}{\\sqrt{2}}$ and that $m^0 = \\bar{m}^0 = 0$. This last assumption in particular will significantly reduce the terms needed to find $\\psi_4$"
+    "We will also assume that $n^0 = \\frac{1}{\\sqrt{2}}$ and that $m^0 = \\bar{m}^0 = 0$. This last assumption in particular will significantly reduce the terms needed to find $\\psi_4$."
    ]
   },
   {
@@ -114,26 +132,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 3: Compute the Weyl scalars\n",
-    "#def WeylScalars(): # This should only be a function in the actual module, not the tutorial\n",
-    "# Step 1:\n",
+    "# Step 1: Call BSSN_RHSs. This module computes many different quantities related to the metric,\n",
+    "#         many of which will be essential here.\n",
     "bssn.BSSN_RHSs()\n",
     "\n",
-    "# Step 2b: Set spatial dimension (must be 3 for BSSN)\n",
+    "# Step 2a: Set spatial dimension (must be 3 for BSSN)\n",
     "DIM = 3\n",
     "par.set_parval_from_str(\"grid::DIM\",DIM)\n",
     "\n",
+    "# Step 2b: Set the coordinate system to Cartesian\n",
     "x = rfm.xxCart[0]\n",
     "y = rfm.xxCart[1]\n",
     "z = rfm.xxCart[2]\n",
     "\n",
+    "# Step 2c: Set which tetrad is used; at the moment, only one supported option\n",
     "TetradChoice = par.parval_from_str(\"TetradChoice\")\n",
+    "\n",
     "if TetradChoice == \"Approx_QuasiKinnersley\":\n",
     "    # Eqs 5.6 in https://arxiv.org/pdf/gr-qc/0104063.pdf\n",
-    "    xmoved = x# - xorig  # Make sure I'm handling coordinates correctly\n",
+    "    xmoved = x# - xorig\n",
     "    ymoved = y# - yorig\n",
     "    zmoved = z# - zorig\n",
     "\n",
+    "    # Step 3a: Choose 3 orthogonal vectors. Here, we choose one in the azimuthal \n",
+    "    #          direction, one in the radial direction, and the cross product of the two. \n",
     "    # Eqs 5.7\n",
     "    v1U = ixp.zerorank1()\n",
     "    v2U = ixp.zerorank1()\n",
@@ -151,7 +173,7 @@
     "                for d in range(DIM):\n",
     "                    v3U[a] += sp.sqrt(bssn.detgammabar) * bssn.gammabarUU[a][d] * LeviCivitaSymbol_rank3[d][b][c] * v1U[b] *v2U[c]\n",
     "\n",
-    "    # Gram-Schmidt orthonormalization of the tetrad.\n",
+    "    # Step 3b: Gram-Schmidt orthonormalization of the vectors.\n",
     "    # The w* vectors here are used to temporarily hold values on the way to the final vectors e*\n",
     "\n",
     "    w1U = ixp.zerorank1()\n",
@@ -198,7 +220,8 @@
     "    e3U = ixp.zerorank1()\n",
     "    for a in range(DIM):\n",
     "        e3U[a] = w3U[a] / sp.sqrt(omega33)\n",
-    "    # Construct the tetrad\n",
+    "        \n",
+    "    # Step 3c: Construct the tetrad itself.\n",
     "    # Eqs. 5.6\n",
     "    isqrt2 = 1/sp.sqrt(2)\n",
     "    ltetU = ixp.zerorank1()\n",
@@ -210,13 +233,18 @@
     "        ntetU[i] = -isqrt2 * e2U[i]\n",
     "        mtetU[i] = isqrt2 * (e3U[i] + sp.I*e1U[i])\n",
     "        mtetbarU[i] = sp.conjugate(mtetU[i])\n",
-    "    nn = isqrt2"
+    "    nn = isqrt2\n",
+    "\n",
+    "else:\n",
+    "    print(\"Error: TetradChoice == \"+par.parval_from_str(\"TetradChoice\")+\" unsupported!\")\n",
+    "    exit(1)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Building the Riemann and extrinsic curvature tensors\n",
     "Now that we have the tetrad in place, we can contract it with the Weyl tensor to obtain the Weyl scalars. Naturally, we must first construct the Weyl tensor to do that. We will first build the Riemann curvature tensor,\n",
     "\\begin{align}\n",
     "R_{abcd} = \\frac{1}{2} (\\bar{\\gamma}_{ad,cb}+\\bar{\\gamma}_{bc,da}-\\bar{\\gamma}_{ac,bd}-\\bar{\\gamma}_{bd,ac}) + \\bar{\\gamma}_{je}\\bar{\\Gamma}^{j}_{bc}\\bar{\\Gamma}^{e}_{ad} - \\bar{\\gamma}_{je}\\bar{\\Gamma}^{j}_{bd}\\bar{\\Gamma}^{e}_{ac}\n",
@@ -228,7 +256,7 @@
     "&= \\partial_k \\left(h_{ij} \\text{ReDD[i][j]} + \\hat{\\gamma}_{ij}\\right) \\\\\n",
     "&= h_{ij,k} \\text{ReDD[i][j]} + h_{ij} \\text{ReDDdD[i][j][k]} + \\hat{\\gamma}_{ij,k}.\n",
     "\\end{align}\n",
-    "It then follows that \n",
+    "It then follows from the familiar chain and product rules of differentiation that \n",
     "\\begin{align}\n",
     "\\bar{\\gamma}_{ij,kl} =& \\partial_l \\bar{\\gamma}_{ij,k} \\\\\n",
     "=& \\partial_l (h_{ij,k} \\text{ReDD[i][j]} + h_{ij} \\text{ReDDdD[i][j][k]} + \\hat{\\gamma}_{ij,k}) \\\\\n",
@@ -239,8 +267,9 @@
     "\n",
     "We also need the extrinsic curvature tensor $K_{ij}$; it can be shown that \n",
     "\\begin{align}\n",
-    "K_{ij} &= e^{4 \\phi} (\\bar{A}_{ij} + \\frac{1}{3} \\bar{\\gamma}_{ij} K)\n",
-    "\\end{align}"
+    "K_{ij} &= e^{4 \\phi} (\\bar{A}_{ij} + \\frac{1}{3} \\bar{\\gamma}_{ij} K),\n",
+    "\\end{align}\n",
+    "where $e^{4 \\phi}$ is the inverse square of the conformal factor, $\\bar{A}_{ij}$ is the conformal, trace-free extrinsic curvature, and $K = \\bar{\\gamma}^{ij} K_{ij}$ is the trace of the extrinsic curvature."
    ]
   },
   {
@@ -249,7 +278,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Declare and construct the second derivative of the metric.\n",
+    "# Step 4a: Declare and construct the second derivative of the metric.\n",
     "gammabarDD_dDD = ixp.zerorank4()\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
@@ -260,7 +289,7 @@
     "                                             bssn.hDD_dD[i][j][l]*rfm.ReDDdD[i][j][k] + \\\n",
     "                                             bssn.hDD[i][j]*rfm.ReDDdDD[i][j][k][l] + \\\n",
     "                                             rfm.ghatDDdDD[i][j][k][l]\n",
-    "# Declare and construct the Riemann curvature tensor:\n",
+    "# Step 4b: Declare and construct the Riemann curvature tensor:\n",
     "RiemannDDDD = ixp.zerorank4()\n",
     "for a in range(DIM):\n",
     "    for b in range(DIM):\n",
@@ -274,8 +303,9 @@
     "                    for j in range(DIM):\n",
     "                        RiemannDDDD[a][b][c][d] +=  bssn.gammabarDD[j][e] * bssn.GammabarUDD[j][b][c] * bssn.GammabarUDD[e][a][d] - \\\n",
     "                                                    bssn.gammabarDD[j][e] * bssn.GammabarUDD[j][b][d] * bssn.GammabarUDD[e][a][c]\n",
-    "# The Ricci tensor was built by BSSN_RHSs.py\n",
-    "# We also need the extrinsic curvature tensor. This can be built from quantities in BSSN_RHSs.py\n",
+    "\n",
+    "                        \n",
+    "# Step 4c: We also need the extrinsic curvature tensor $K_{ij}$. This can be built from quantities from BSSN_RHSs\n",
     "extrinsicKDD = ixp.zerorank2()\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
@@ -286,30 +316,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Baker, Campanelli, and Lousto showed that \n",
+    "# Putting it all together: calculating $\\psi_4$\n",
+    "We do not not need to explicitly build the Weyl tensor itself, because the BCL paper shows that, for the Weyl tensor $C_{ijkl}$,\n",
     "\\begin{align}\n",
-    "\\psi_4 =& (R_{ijkl} + 2K_{i[k}K_{l]j}) n^i \\bar{m}^j n^k \\bar{m}^l \\\\\n",
+    "\\psi_4 =&  C_{ijkl} n^i \\bar{m}^j n^k \\bar{m}^l\\\\\n",
+    "=& (R_{ijkl} + 2K_{i[k}K_{l]j}) n^i \\bar{m}^j n^k \\bar{m}^l \\\\\n",
     "&- 8 (K_{j[k,l]} + \\Gamma^p_{j[k} K_{l]p}) n^{[0} \\bar{m}^{j]} n^k \\bar{m}^l \\\\\n",
-    "&+ 4 (R_{jl} - K_{jp} K^p_l + KK_{jl}) n^{[0} \\bar{m}^{j]} n^{[0} \\bar{m}^{l]}\n",
+    "&+ 4 (R_{jl} - K_{jp} K^p_l + KK_{jl}) n^{[0} \\bar{m}^{j]} n^{[0} \\bar{m}^{l]}.\n",
     "\\end{align}\n",
+    "Note here the brackets around pairs of indices. This indicates the antisymmetric part of a tensor; that is for some arbitrary tensor $A_{ij}$, $A_{[ij]} = \\frac{1}{2}(A_{ij}-A_{ji})$. This applies identically for indices belonging to separate tensors as well as superscripts in place of subscripts.\n",
     "\n",
-    "To make things easier to keep track of, we will break this down into three parts, by first defining each of the parenthetical terms above separately. That is, let \n",
+    "To make it easier to track the construction of this expression, we will break it down into three parts, by first defining each of the parenthetical terms above separately. That is, let \n",
     "\\begin{align}\n",
     "\\text{GaussDDDD} =& R_{ijkl} + 2K_{i[k}K_{l]j} \\\\\n",
     "\\text{CodazziDDD} =& K_{j[k,l]} + \\Gamma^p_{j[k} K_{l]p} \\\\\n",
     "\\text{RojoDD} = & R_{jl} - K_{jp} K^p_l + KK_{jl},\n",
     "\\end{align}\n",
-    "where these quantities are so named because of their relation to the Gauss-Codazzi equations. Then, we simply contract these with the tetrad we chose earlier. To arrive at an expression for $\\psi_4$."
+    "where these quantities are so named because of their relation to the Gauss-Codazzi equations. Then, we simply contract these with the tetrad we chose earlier to arrive at an expression for $\\psi_4$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
+    "# Step 5: Build the formula for \\psi_4.\n",
     "GaussDDDD = ixp.zerorank4()\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
@@ -317,7 +351,8 @@
     "            for l in range(DIM):\n",
     "                GaussDDDD[i][j][k][l] = RiemannDDDD[i][j][k][l] + extrinsicKDD[i][k]*extrinsicKDD[l][j] - extrinsicKDD[i][l]*extrinsicKDD[k][j]\n",
     "\n",
-    "# Codazzi equation: involving covariant derivatives of the extrinsic curvature. We will first need to declare derivatives of extrinsicKDD\n",
+    "# Codazzi equation: involving covariant derivatives of the extrinsic curvature. \n",
+    "# We will first need to declare derivatives of extrinsicKDD\n",
     "extrinsicKDD_dD = ixp.declarerank3(\"extrinsicKDD_dD\",\"sym12\")\n",
     "CodazziDDD = ixp.zerorank3()\n",
     "for j in range(DIM):\n",
@@ -327,7 +362,8 @@
     "            for p in range(DIM):\n",
     "                CodazziDDD[j][k][l] += bssn.GammabarUDD[p][j][l]*extrinsicKDD[k][p] - bssn.GammabarUDD[p][j][k]*extrinsicKDD[l][p]\n",
     "\n",
-    "# This next tensor might relate to the Mainardi eq.\n",
+    "# Another piece. While not associated with any particular equation,\n",
+    "# this is still useful for organizational purposes.\n",
     "RojoDD = ixp.zerorank2()\n",
     "for j in range(DIM):\n",
     "    for l in range(DIM):\n",
@@ -337,14 +373,16 @@
     "                RojoDD[j][l] += extrinsicKDD[j][p]*bssn.gammabarUU[p][d]*extrinsicKDD[d][l] - bssn.trK*extrinsicKDD[j][l]\n",
     "\n",
     "# Now we can calculate $\\psi_4$ itself!\n",
-    "psi4 = 0\n",
+    "psi4 = sp.sympify(0)\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
     "        psi4 += RojoDD[j][l] * nn * nn * mtetbarU[j] * mtetbarU[l]\n",
     "        for k in range(DIM):\n",
     "            psi4 += 2 * CodazziDDD[j][k][l] * ntetU[k] * nn * mtetbarU[j] * mtetbarU[l]\n",
     "            for l in range(DIM):\n",
-    "                psi4 += GaussDDDD[i][j][k][l] * ntetU[i] * ntetU[k] * mtetbarU[j] * mtetbarU[l]\n"
+    "                psi4 += GaussDDDD[i][j][k][l] * ntetU[i] * ntetU[k] * mtetbarU[j] * mtetbarU[l]\n",
+    "\n",
+    "print(sp.simplify(psi4))"
    ]
   }
  ],
