--- a/Tutorial-Finite_Difference_Derivatives.ipynb
+++ b/Tutorial-Finite_Difference_Derivatives.ipynb
@@ -142,16 +142,16 @@
      "text": [
       "/*\n",
       " *  Original SymPy expressions:\n",
-      " *  \"[const double phi_dD0 = invdx0*(-2*phi_i0m1_i1_i2/3 + phi_i0m2_i1_i2/12 + 2*phi_i0p1_i1_i2/3 - phi_i0p2_i1_i2/12),\n",
-      " *    out_gfs[IDX4(OUTPUTGF, i0, i1, i2)] = phi_dD0**2]\"\n",
+      " *  \"[const double phi_dD0 = invdx0*(-2*phi_i0m1/3 + phi_i0m2/12 + 2*phi_i0p1/3 - phi_i0p2/12),\n",
+      " *    out_gfs[IDX2(OUTPUTGF, i0)] = phi_dD0**2]\"\n",
       " */\n",
       "{\n",
-      "   const double phi_i0m2_i1_i2 = in_gfs[IDX4(PHIGF, i0-2,i1,i2)];\n",
-      "   const double phi_i0m1_i1_i2 = in_gfs[IDX4(PHIGF, i0-1,i1,i2)];\n",
-      "   const double phi_i0p1_i1_i2 = in_gfs[IDX4(PHIGF, i0+1,i1,i2)];\n",
-      "   const double phi_i0p2_i1_i2 = in_gfs[IDX4(PHIGF, i0+2,i1,i2)];\n",
-      "   const double phi_dD0 = invdx0*(-(2.0 / 3.0)*phi_i0m1_i1_i2 + ((1.0 / 12.0))*phi_i0m2_i1_i2 + ((2.0 / 3.0))*phi_i0p1_i1_i2 - (1.0 / 12.0)*phi_i0p2_i1_i2);\n",
-      "   out_gfs[IDX4(OUTPUTGF, i0, i1, i2)] = pow(phi_dD0, 2);\n",
+      "   const double phi_i0m2 = in_gfs[IDX2(PHIGF, i0-2)];\n",
+      "   const double phi_i0m1 = in_gfs[IDX2(PHIGF, i0-1)];\n",
+      "   const double phi_i0p1 = in_gfs[IDX2(PHIGF, i0+1)];\n",
+      "   const double phi_i0p2 = in_gfs[IDX2(PHIGF, i0+2)];\n",
+      "   const double phi_dD0 = invdx0*(-2.0/3.0*phi_i0m1 + (1.0/12.0)*phi_i0m2 + (2.0/3.0)*phi_i0p1 - 1.0/12.0*phi_i0p2);\n",
+      "   out_gfs[IDX2(OUTPUTGF, i0)] = pow(phi_dD0, 2);\n",
       "}\n"
      ]
     }
@@ -162,6 +162,9 @@
     "import grid as gri\n",
     "import indexedexp as ixp\n",
     "import finite_difference as fin\n",
+    "\n",
+    "# Set the spatial dimension to 1\n",
+    "par.set_paramsvals_value(\"grid::DIM = 1\")\n",
     "\n",
     "# Register the input gridfunction \"phi\" and the gridfunction to which data are output, \"output\":\n",
     "phi, output = gri.register_gridfunctions(\"AUX\",[\"phi\",\"output\"])\n",
@@ -174,6 +177,15 @@
     "\n",
     "# Output to the screen the \n",
     "fin.FD_outputC(\"stdout\",lhrh(lhs=gri.gfaccess(\"out_gfs\",\"output\"),rhs=output))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## (In progress) Generating the rest of the C code\n",
+    "\n",
+    "The gridfunction $\\texttt{PHI}_i$, defined at all points $i\\in [0,N]$, is a gridfunction that samples some function $\\phi(x)$ at discrete, uniform points $x_i = x_0 + i \\Delta x$, where $\\Delta x$ is the gridspacing. The variable $\\texttt{invdx0}$ is defined in terms of the uniform gridspacing $\\Delta x$ as $\\texttt{invdx0} = 1/(\\Delta x)$. (*Aside: Why do we choose to multiply by $1/\\Delta x$ instead of dividing the expression by $\\Delta x$? Answer: multiplication of floating-point numbers is much cheaper than division, usually by a factor of 5 or more.*)"
    ]
   }
  ],
@@ -193,7 +205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
