finite difference tutorial update

--- a/Tutorial-Finite_Difference_Derivatives.ipynb
+++ b/Tutorial-Finite_Difference_Derivatives.ipynb
@@ -185,7 +185,9 @@
    "source": [
     "## (In progress) Generating the rest of the C code\n",
     "\n",
-    "The gridfunction $\\texttt{PHI}_i$, defined at all points $i\\in [0,N]$, is a gridfunction that samples some function $\\phi(x)$ at discrete, uniform points $x_i = x_0 + i \\Delta x$, where $\\Delta x$ is the gridspacing. The variable $\\texttt{invdx0}$ is defined in terms of the uniform gridspacing $\\Delta x$ as $\\texttt{invdx0} = 1/(\\Delta x)$. (*Aside: Why do we choose to multiply by $1/\\Delta x$ instead of dividing the expression by $\\Delta x$? Answer: multiplication of floating-point numbers is much cheaper than division, usually by a factor of 5 or more.*)"
+    "The gridfunction $\\phi$ samples some function $\\phi(x)$ at discrete uniform points in $x$, called $x_i$, so that $\\phi(x_i) = \\phi_{i}$=in_gfs[IDX2(PHIGF, i)]. $\\phi_i$ is defined at all points $i\\in [0,N]$. For a *uniformly* sampled function with constant grid spacing (sample rate) $\\Delta x$, $x_i$ is defined as $x_i = x_0 + i \\Delta x$. \n",
+    "\n",
+    "In the above code, the variable $\\texttt{invdx0}$ is defined in terms of the uniform gridspacing $\\Delta x$ as $\\texttt{invdx0} = \\frac{1}{\\Delta x}$. (*Aside: Why do we choose to multiply by $1/\\Delta x$ instead of dividing the expression by $\\Delta x$, which would seem much more straightforward? Answer: as discussed in the [first part of the tutorial](Tutorial-Coutput__Parameter_Interface.ipynb), division of floating-point numbers on modern CPUs is far more expensive than multiplication, usually by a factor of ~3 or more.*)"
    ]
   }
  ],
