--- a/Tutorial-Finite_Difference_Derivatives.ipynb
+++ b/Tutorial-Finite_Difference_Derivatives.ipynb
@@ -143,7 +143,7 @@
       "/*\n",
       " *  Original SymPy expressions:\n",
       " *  \"[const double phi_dD0 = invdx0*(-2*phi_i0m1/3 + phi_i0m2/12 + 2*phi_i0p1/3 - phi_i0p2/12),\n",
-      " *    out_gfs[IDX2(OUTPUTGF, i0)] = phi_dD0**2]\"\n",
+      " *    in_gfs[IDX2(OUTPUTGF, i0)] = phi_dD0**2]\"\n",
       " */\n",
       "{\n",
       "   const double phi_i0m2 = in_gfs[IDX2(PHIGF, i0-2)];\n",
@@ -151,7 +151,7 @@
       "   const double phi_i0p1 = in_gfs[IDX2(PHIGF, i0+1)];\n",
       "   const double phi_i0p2 = in_gfs[IDX2(PHIGF, i0+2)];\n",
       "   const double phi_dD0 = invdx0*(-2.0/3.0*phi_i0m1 + (1.0/12.0)*phi_i0m2 + (2.0/3.0)*phi_i0p1 - 1.0/12.0*phi_i0p2);\n",
-      "   out_gfs[IDX2(OUTPUTGF, i0)] = pow(phi_dD0, 2);\n",
+      "   in_gfs[IDX2(OUTPUTGF, i0)] = pow(phi_dD0, 2);\n",
       "}\n"
      ]
     }
@@ -176,7 +176,7 @@
     "output = phi_dD[0]**2\n",
     "\n",
     "# Output to the screen the \n",
-    "fin.FD_outputC(\"stdout\",lhrh(lhs=gri.gfaccess(\"out_gfs\",\"output\"),rhs=output))"
+    "fin.FD_outputC(\"stdout\",lhrh(lhs=gri.gfaccess(\"in_gfs\",\"output\"),rhs=output))"
    ]
   },
   {
@@ -185,10 +185,92 @@
    "source": [
     "## (In progress) Generating the rest of the C code\n",
     "\n",
-    "The gridfunction $\\phi$ samples some function $\\phi(x)$ at discrete uniform points in $x$, called $x_i$, so that $\\phi(x_i) = \\phi_{i}$=in_gfs[IDX2(PHIGF, i)]. $\\phi_i$ is defined at all points $i\\in [0,N]$. For a *uniformly* sampled function with constant grid spacing (sample rate) $\\Delta x$, $x_i$ is defined as $x_i = x_0 + i \\Delta x$. \n",
+    "The gridfunction PHIGF samples some function $\\phi(x)$ at discrete uniform points in $x$, labeled $x_i$ at all points $i\\in [0,N]$, so that \n",
+    "$$\\phi(x_i) = \\phi_{i}=\\text{in_gfs[IDX2(PHIGF, i)]}.$$ \n",
+    "For a *uniformly* sampled function with constant grid spacing (sample rate) $\\Delta x$, $x_i$ is defined as $x_i = x_0 + i \\Delta x$.\n",
     "\n",
     "In the above code, the variable $\\texttt{invdx0}$ is defined in terms of the uniform gridspacing $\\Delta x$ as $\\texttt{invdx0} = \\frac{1}{\\Delta x}$. (*Aside: Why do we choose to multiply by $1/\\Delta x$ instead of dividing the expression by $\\Delta x$, which would seem much more straightforward? Answer: as discussed in the [first part of the tutorial](Tutorial-Coutput__Parameter_Interface.ipynb), division of floating-point numbers on modern CPUs is far more expensive than multiplication, usually by a factor of ~3 or more.*)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#include \"stdio.h\"\n",
+      "#include \"math.h\"\n",
+      "int main() {\n",
+      "    for(int i0=0; i0<N; i0++) {\n",
+      "        const double PI = 3.14159265358979323846264338327950288;\n",
+      "        const double Delta_x = 0.01/PI;\n",
+      "        const double x_0 = PI/2.0;\n",
+      "        const double x = x_0 + (double)i0*Delta_x;\n",
+      "        in_gfs[IDX2(PHIGF, i0)] = sin(x);\n",
+      "        \n",
+      "    } // END LOOP: for(int i0=0; i0<N; i0++)\n",
+      "    for(int i0=0; i0<N; i0++) {\n",
+      "        /*\n",
+      "         *  Original SymPy expressions:\n",
+      "         *  \"[const double phi_dD0 = invdx0*(-2*phi_i0m1/3 + phi_i0m2/12 + 2*phi_i0p1/3 - phi_i0p2/12),\n",
+      "         *    in_gfs[IDX2(OUTPUTGF, i0)] = phi_dD0**2]\"\n",
+      "         */\n",
+      "        {\n",
+      "           const double phi_i0m2 = in_gfs[IDX2(PHIGF, i0-2)];\n",
+      "           const double phi_i0m1 = in_gfs[IDX2(PHIGF, i0-1)];\n",
+      "           const double phi_i0p1 = in_gfs[IDX2(PHIGF, i0+1)];\n",
+      "           const double phi_i0p2 = in_gfs[IDX2(PHIGF, i0+2)];\n",
+      "           const double phi_dD0 = invdx0*(-2.0/3.0*phi_i0m1 + (1.0/12.0)*phi_i0m2 + (2.0/3.0)*phi_i0p1 - 1.0/12.0*phi_i0p2);\n",
+      "           in_gfs[IDX2(OUTPUTGF, i0)] = pow(phi_dD0, 2);\n",
+      "        }\n",
+      "        \n",
+      "    } // END LOOP: for(int i0=0; i0<N; i0++)\n",
+      "    return 0;\n",
+      "}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import loop as loop\n",
+    "import sys as sys\n",
+    "def C(str):\n",
+    "    return str + \"\\n\"\n",
+    "\n",
+    "cout  = C('#include \"stdio.h\"')\n",
+    "cout += C('#include \"math.h\"')\n",
+    "cout += C('int main() {')\n",
+    "#cout += gri.C_allocate_gfs()\n",
+    "tabprefix = \"    \"\n",
+    "# Set phi to be some function of x, where x_i = x_0 + i*Delta_x:\n",
+    "phiset  = C('\\\n",
+    "const double PI = 3.14159265358979323846264338327950288;\\n\\\n",
+    "const double Delta_x = 0.01/PI;\\n\\\n",
+    "const double x_0 = PI/2.0;\\n\\\n",
+    "const double x = x_0 + (double)i0*Delta_x;\\n\\\n",
+    "in_gfs[IDX2(PHIGF, i0)] = sin(x);')\n",
+    "\n",
+    "cout += loop.loop(\"i0\",\"0\",\"N\",\"1\",\"\", tabprefix,phiset)\n",
+    "\n",
+    "cout += loop.loop(\"i0\",\"0\",\"N\",\"1\",\"\", tabprefix,\n",
+    "                  fin.FD_outputC(\"returnstring\",lhrh(lhs=gri.gfaccess(\"in_gfs\",\"output\"),rhs=output)))\n",
+    "\n",
+    "#cout += gri.C_free_gfs()\n",
+    "cout += C(tabprefix+'return 0;')\n",
+    "cout += C('}')\n",
+    "print(cout)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
