Comment loop.py properly. Also add link to psi_4 in Cartesian coords tutorial, courtesy Patrick Nelson

--- a/NRPy+_Tutorial.ipynb
+++ b/NRPy+_Tutorial.ipynb
@@ -41,7 +41,8 @@
     "+ #### Application: [Maxwell's Equations in Curvilinear Coordinates, using a Reference Metric](Tutorial-MaxwellCurvilinear.ipynb) (*Courtesy Ian Ruchlin*)\n",
     "\n",
     "#### (READ THIRD) Solving Einstein's Equations in Curvilinear Coordinates\n",
-    "+ #### Application: [General Relativity in the BSSN Formalism, Moving Puncture Gauge](Tutorial-BSSNCurvilinear.ipynb)"
+    "+ #### Application: [General Relativity in the BSSN Formalism, Moving Puncture Gauge](Tutorial-BSSNCurvilinear.ipynb)\n",
+    "+ #### In progress: [Computing the Weyl $\\psi_4$ Scalar in Cartesian Coordinates](Tutorial-WeylScalars-Cartesian.ipynb)"
    ]
   }
  ],
