--- a/Tutorial-Finite_Difference_Derivatives.ipynb
+++ b/Tutorial-Finite_Difference_Derivatives.ipynb
@@ -127,7 +127,7 @@
     "* **sympyexpr_list**: A single named tuple or list of named tuples of type \"lhrh\", where the lhrh type refers to the simple structure:\n",
     "    * **lhrh(left-hand side of equation, right-hand side of the equation)**\n",
     "\n",
-    "Time for an example: let's compute $$\\texttt{output} = (\\partial_0 \\phi)^2$$\n",
+    "Time for an example: let's compute $$\\texttt{output} = \\partial_0^2 \\phi$$\n",
     "for gridfunctions $\\texttt{output}$ and $\\texttt{phi}=\\phi$:"
    ]
   },
@@ -142,16 +142,17 @@
      "text": [
       "/*\n",
       " *  Original SymPy expressions:\n",
-      " *  \"[const double phi_dD0 = invdx0*(-2*phi_i0m1/3 + phi_i0m2/12 + 2*phi_i0p1/3 - phi_i0p2/12),\n",
-      " *    in_gfs[IDX2(OUTPUTGF, i0)] = phi_dD0**2]\"\n",
+      " *  \"[const double phi_dDD00 = invdx0**2*(-5*phi/2 + 4*phi_i0m1/3 - phi_i0m2/12 + 4*phi_i0p1/3 - phi_i0p2/12),\n",
+      " *    in_gfs[IDX2(OUTPUTGF, i0)] = phi_dDD00]\"\n",
       " */\n",
       "{\n",
       "   const double phi_i0m2 = in_gfs[IDX2(PHIGF, i0-2)];\n",
       "   const double phi_i0m1 = in_gfs[IDX2(PHIGF, i0-1)];\n",
+      "   const double phi = in_gfs[IDX2(PHIGF, i0)];\n",
       "   const double phi_i0p1 = in_gfs[IDX2(PHIGF, i0+1)];\n",
       "   const double phi_i0p2 = in_gfs[IDX2(PHIGF, i0+2)];\n",
-      "   const double phi_dD0 = invdx0*(-2.0/3.0*phi_i0m1 + (1.0/12.0)*phi_i0m2 + (2.0/3.0)*phi_i0p1 - 1.0/12.0*phi_i0p2);\n",
-      "   in_gfs[IDX2(OUTPUTGF, i0)] = pow(phi_dD0, 2);\n",
+      "   const double phi_dDD00 = pow(invdx0, 2)*(-5.0/2.0*phi + (4.0/3.0)*phi_i0m1 - 1.0/12.0*phi_i0m2 + (4.0/3.0)*phi_i0p1 - 1.0/12.0*phi_i0p2);\n",
+      "   in_gfs[IDX2(OUTPUTGF, i0)] = phi_dDD00;\n",
       "}\n"
      ]
     }
@@ -170,10 +171,10 @@
     "phi, output = gri.register_gridfunctions(\"AUX\",[\"phi\",\"output\"])\n",
     "\n",
     "# Declare phi_dD as a rank-1 indexed expression: phi_dD[i] = \\partial_i phi\n",
-    "phi_dD = ixp.declarerank1(\"phi_dD\")\n",
+    "phi_dDD = ixp.declarerank2(\"phi_dDD\",\"nosym\")\n",
     "\n",
-    "# Set output to (\\partial_0 phi)^2\n",
-    "output = phi_dD[0]**2\n",
+    "# Set output to \\partial_0^2 phi\n",
+    "output = phi_dDD[0][0]\n",
     "\n",
     "# Output to the screen the \n",
     "fin.FD_outputC(\"stdout\",lhrh(lhs=gri.gfaccess(\"in_gfs\",\"output\"),rhs=output))"
@@ -202,75 +203,122 @@
      "output_type": "stream",
      "text": [
       "#include \"stdio.h\"\n",
+      "#include \"stdlib.h\"\n",
       "#include \"math.h\"\n",
+      "#define IDX2(gf, i) ( (i) + N * (gf) )\n",
+      "#define PHIGF    0\n",
+      "#define OUTPUTGF 1\n",
+      "double x(const double x_0,const int i,const double Delta_x) {\n",
+      "    return x_0 + (double)i*Delta_x;\n",
+      "}\n",
       "int main() {\n",
+      "    const int N = 18;\n",
+      "    const double PI = 3.14159265358979323846264338327950288;\n",
+      "    const double Delta_x = PI/((double)N);\n",
+      "    const double invdx0 = 1.0/Delta_x;\n",
+      "    const double x_0 = PI/2.0;\n",
+      "    double *in_gfs = (double *)malloc(sizeof(double)*N*2);\n",
       "    for(int i0=0; i0<N; i0++) {\n",
-      "        const double PI = 3.14159265358979323846264338327950288;\n",
-      "        const double Delta_x = 0.01/PI;\n",
-      "        const double x_0 = PI/2.0;\n",
-      "        const double x = x_0 + (double)i0*Delta_x;\n",
-      "        in_gfs[IDX2(PHIGF, i0)] = sin(x);\n",
-      "        \n",
+      "        in_gfs[IDX2(PHIGF, i0)] = sin(x(x_0,i0,Delta_x));\n",
       "    } // END LOOP: for(int i0=0; i0<N; i0++)\n",
-      "    for(int i0=0; i0<N; i0++) {\n",
+      "    for(int i0=2; i0<N-2; i0++) {\n",
       "        /*\n",
       "         *  Original SymPy expressions:\n",
-      "         *  \"[const double phi_dD0 = invdx0*(-2*phi_i0m1/3 + phi_i0m2/12 + 2*phi_i0p1/3 - phi_i0p2/12),\n",
-      "         *    in_gfs[IDX2(OUTPUTGF, i0)] = phi_dD0**2]\"\n",
+      "         *  \"[const double phi_dDD00 = invdx0**2*(-5*phi/2 + 4*phi_i0m1/3 - phi_i0m2/12 + 4*phi_i0p1/3 - phi_i0p2/12),\n",
+      "         *    in_gfs[IDX2(OUTPUTGF, i0)] = phi_dDD00]\"\n",
       "         */\n",
       "        {\n",
       "           const double phi_i0m2 = in_gfs[IDX2(PHIGF, i0-2)];\n",
       "           const double phi_i0m1 = in_gfs[IDX2(PHIGF, i0-1)];\n",
+      "           const double phi = in_gfs[IDX2(PHIGF, i0)];\n",
       "           const double phi_i0p1 = in_gfs[IDX2(PHIGF, i0+1)];\n",
       "           const double phi_i0p2 = in_gfs[IDX2(PHIGF, i0+2)];\n",
-      "           const double phi_dD0 = invdx0*(-2.0/3.0*phi_i0m1 + (1.0/12.0)*phi_i0m2 + (2.0/3.0)*phi_i0p1 - 1.0/12.0*phi_i0p2);\n",
-      "           in_gfs[IDX2(OUTPUTGF, i0)] = pow(phi_dD0, 2);\n",
+      "           const double phi_dDD00 = pow(invdx0, 2)*(-5.0/2.0*phi + (4.0/3.0)*phi_i0m1 - 1.0/12.0*phi_i0m2 + (4.0/3.0)*phi_i0p1 - 1.0/12.0*phi_i0p2);\n",
+      "           in_gfs[IDX2(OUTPUTGF, i0)] = phi_dDD00;\n",
       "        }\n",
       "        \n",
-      "    } // END LOOP: for(int i0=0; i0<N; i0++)\n",
+      "    } // END LOOP: for(int i0=2; i0<N-2; i0++)\n",
+      "    int i0 = 4;\n",
+      "    double xx = x(x_0,i0,Delta_x);\n",
+      "    double FD = in_gfs[IDX2(OUTPUTGF,i0)];\n",
+      "    double EX = -sin(xx);\n",
+      "    printf(\"finite difference derivative partial_x^2 sin(x), evaluated at x=%.15e is:\\n\\t%.15e\\n\",xx,FD);\n",
+      "    printf(\"Exact value is:\\n\\t%.15e\\n\",EX);\n",
+      "    printf(\"Relative error:\\t%.15e\\n\",fabs(EX-FD)/(EX));\n",
+      "    free(in_gfs);\n",
       "    return 0;\n",
       "}\n",
-      "\n"
+      "\n",
+      "finite difference derivative partial_x^2 sin(x), evaluated at x=2.268928027592628e+00 is:\n",
+      "\t-7.660365665005484e-01\n",
+      "Exact value is:\n",
+      "\t-7.660444431189780e-01\n",
+      "Relative error:\t-1.028219511329282e-05\n"
      ]
     }
    ],
    "source": [
     "import loop as loop\n",
     "import sys as sys\n",
+    "\n",
+    "tabprefix = \"\"\n",
     "def C(str):\n",
-    "    return str + \"\\n\"\n",
+    "    return tabprefix + str + \"\\n\"\n",
     "\n",
     "cout  = C('#include \"stdio.h\"')\n",
+    "cout += C('#include \"stdlib.h\"')\n",
     "cout += C('#include \"math.h\"')\n",
-    "cout += C('int main() {')\n",
-    "#cout += gri.C_allocate_gfs()\n",
+    "cout += C('#define IDX2(gf, i) ( (i) + N * (gf) )')\n",
+    "cout += C('#define PHIGF    0')\n",
+    "cout += C('#define OUTPUTGF 1')\n",
+    "\n",
+    "cout += C('double x(const double x_0,const int i,const double Delta_x) {')\n",
     "tabprefix = \"    \"\n",
+    "cout += C('return x_0 + (double)i*Delta_x;')\n",
+    "tabprefix = \"\"\n",
+    "cout += C('}')\n",
+    "\n",
+    "cout += C('int main() {')\n",
+    "tabprefix = \"    \"\n",
+    "cout += C('const int N = 18;')\n",
+    "cout += C('const double PI = 3.14159265358979323846264338327950288;')\n",
+    "cout += C('const double Delta_x = PI/((double)N);')\n",
+    "cout += C('const double invdx0 = 1.0/Delta_x;')\n",
+    "cout += C('const double x_0 = PI/2.0;')\n",
+    "\n",
+    "# Allocate space for two gridfunctions\n",
+    "cout += C('double *in_gfs = (double *)malloc(sizeof(double)*N*2);')\n",
+    "\n",
+    "\n",
     "# Set phi to be some function of x, where x_i = x_0 + i*Delta_x:\n",
-    "phiset  = C('\\\n",
-    "const double PI = 3.14159265358979323846264338327950288;\\n\\\n",
-    "const double Delta_x = 0.01/PI;\\n\\\n",
-    "const double x_0 = PI/2.0;\\n\\\n",
-    "const double x = x_0 + (double)i0*Delta_x;\\n\\\n",
-    "in_gfs[IDX2(PHIGF, i0)] = sin(x);')\n",
+    "phiset = 'in_gfs[IDX2(PHIGF, i0)] = sin(x(x_0,i0,Delta_x));'\n",
     "\n",
     "cout += loop.loop(\"i0\",\"0\",\"N\",\"1\",\"\", tabprefix,phiset)\n",
     "\n",
-    "cout += loop.loop(\"i0\",\"0\",\"N\",\"1\",\"\", tabprefix,\n",
+    "cout += loop.loop(\"i0\",\"2\",\"N-2\",\"1\",\"\", tabprefix,\n",
     "                  fin.FD_outputC(\"returnstring\",lhrh(lhs=gri.gfaccess(\"in_gfs\",\"output\"),rhs=output)))\n",
     "\n",
+    "cout += C('int i0 = 4;')\n",
+    "cout += C('double xx = x(x_0,i0,Delta_x);')\n",
+    "cout += C('double FD = in_gfs[IDX2(OUTPUTGF,i0)];')\n",
+    "cout += C('double EX = -sin(xx);')\n",
+    "cout += C('printf(\"finite difference derivative partial_x^2 sin(x), evaluated at x=%.15e is:\\\\n\\\\t%.15e\\\\n\",xx,FD);')\n",
+    "cout += C('printf(\"Exact value is:\\\\n\\\\t%.15e\\\\n\",EX);')\n",
+    "cout += C('printf(\"Relative error:\\\\t%.15e\\\\n\",fabs(EX-FD)/(EX));')\n",
     "#cout += gri.C_free_gfs()\n",
-    "cout += C(tabprefix+'return 0;')\n",
+    "cout += C('free(in_gfs);')\n",
+    "\n",
+    "cout += C('return 0;')\n",
+    "tabprefix = \"\"\n",
+    "\n",
     "cout += C('}')\n",
     "print(cout)\n",
-    "\n"
+    "\n",
+    "with open(\"finite_difference_test.c\", \"w\") as C_file_output:\n",
+    "    C_file_output.write(cout)\n",
+    "!gcc -std=gnu99 finite_difference_test.c -o finite_difference_test -lm\n",
+    "!./finite_difference_test"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
